--- a/src/components/encuesta.css
+++ b/src/components/encuesta.css
@@ -2,25 +2,35 @@ html,body{
     display: grid;
     height: 100%;
     place-items: center;
-    background: #00943d;
+   
   }
 
+  .container{
+    background-color: #ffff;
+    border-radius: 10px;
+    width: 80%;
+  }
+  .logo-img{
+    
+
+  }
   /* Texto de bienvenida y de éxito */
   
 
   .welcome-text h2, .success-text h2{
 
     font-size: 25px;
-    color: #fff;
+    color: #000;
     font-weight: 400;
     text-align: center;
 
   }
 
-  .question h3{
+
+  .question h3, .comment-area h3{
 
     font-size: 22px;
-    color: #fff;
+    color: #000;
     font-weight: 400;
     text-align: center;
 
@@ -30,7 +40,7 @@ html,body{
 
   .stars label{
     font-size: 40px;
-    color: #444;
+    color: #000;
     padding: 10px;
     float: right;
     transition: all 0.05s ease
@@ -38,7 +48,7 @@ html,body{
 
   .star-text{
     font-size: 25px;
-    color: #fe7;
+    color: #000;
     font-weight: 500;
     margin: 5px 0 20px 0;
     text-align: center;
@@ -49,9 +59,9 @@ html,body{
   .send-button button{
     
     display: inline-block;
-    border: 1px solid #444;
+    border: 1px solid #000;
     outline: none;
-    background: #444;
+    background: #000;
     color: #fff;
     font-size: 17px;
     font-weight: 500;
@@ -69,5 +79,5 @@ html,body{
   }
   
   .success-text{
-display: none;
+    display: none;
   }
